cvstyle.css
@font-face
{
	font-family: 'aileronultralight';
	src: url('fonts/Aileron-UltraLight-webfont.woff');
	font-weight: normal;
}

@font-face {
    font-family: 'aileronthin';
	src: url('fonts/Aileron-Thin-webfont.woff');
	font-weight: normal;
}

@font-face {
    font-family: 'aileronregular';
    src: url('fonts/Aileron-Regular-webfont.woff');
    font-weight: normal;
}

@font-face {
    font-family: 'aileronsemibold';
    src: url('fonts/Aileron-SemiBold-webfont.woff');
    font-weight: normal;
}

@font-face {
	font-family: 'aileronbold';
	src: url('fonts/Aileron-Bold-webfont.woff');
	font-weight: normal;
}


body
{
	color:#555666;
	display: flex;
	font-family: 'aileronregular';
	margin:0;
	font-size: 1.1em;
}

h1
{
	font-size: 4em;
	font-family: 'aileronthin';
	font-weight: normal;
	color: #000;
}

h2, h3, h4, h5
{
	font-family: 'aileronbold';
	font-weight: normal;
}

h2
{
	font-family: 'aileronsemibold';
	font-size: 1.8em;
	
}

h3
{
	font-size: 1.5em;
}

h5
{
	font-size: 1.2em;
}

#gauche
{	display: flex;
	flex-direction: column;
	background-color:#FECA07;
	width: 40%;
	padding: 2% 0 ;
}

#gauche img
{
	border-radius: 100%;
	border: 5px solid #DEB211;
}

#gauche #photo
{
	align-self: center;
	padding: 5% 0;
}

#gauche h2
{
	background-color: #404040;
	color:#FECA07;
	text-align: center;
	padding: 2% 0;
}

#gauche #contact .contenu
{
	font-family: 'aileronsemibold';
}

#gauche .contenu
{
	padding: 0 10% 0 10%;
}

#gauche #loisirs
{
	margin-top: auto; 
}

#gauche #loisirs .contenu
{
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	color: #404040;
}

#gauche .contenu span
{
	padding: 4%;
	border: 3px solid #404040;
	border-radius: 100%;
}

#droite
{
	width: 70%;
	padding: 5%;
}

#droite header
{
	margin: 10% 0 ;
}

#droite .xs
{
	display:none;
}

#droite header #prenom
{
	color:#FECA07;
	font-family: 'aileronregular';
	font-style: normal;
}

#droite header h2
{
	margin-top:-40px;
	color:#555;
}

#droite h2
{
	color:#000;
}

#droite h2 span
{
	padding: 0 3% 0 0;
}

#droite .right h4
{
	margin: -3% 0 -1% 0;
}

#droite span
{
	color:#FECA07;
}

#droite .lignetitre
{
	background-color: #FECA07;
	height: 2px;
	width: 80px;
	margin-top: -20px;
}

#droite .ligne
{
	background-color: #FECA07;
	height: 2px;
	margin-bottom: 3%;
}

#droite .container
{
	display: flex;
}

#droite .toggle
{
	width: 5%;
}

#droite .left
{
	width: 32%;
}

#droite .right
{
	width: 60%;
}

#droite #recommendations h5
{
	margin-bottom: -2%;
}

#droite #recommendations .left
{
	width:50%;
}

#droite #recommendations .right
{
	width:50%;
}

#droite #recommendations em
{
	font-style: normal;
	font-family: 'aileronbold';
}

@media (max-width: 768px)

{
	body
	{
		display: flex;
		flex-direction: column-reverse;
		width: 100%;
	}

	#gauche 
	{
		display:flex;
		flex-direction: column;
		background-color: #FFFFFF;
		width: auto;
	}

	#gauche .lg
	{
		display:none;
	}

	#gauche h2
	{
		background-color: #FECA07;
		color: #FFFFFF;
		text-align: left;
		padding: 0 10%;
	}

	#gauche .contenu span
	{
		background-color: #FECA07;
		color: #FFFFFF;
		border: 3px solid;
	}

	#droite
	{
		display:flex;
		flex-direction: column;
		width: auto;
		padding: 0;
	}

	#droite header
	{
		text-align: center;
	}

	#droite header .lignetitre
	{
		display:none;
	}
	
	#droite .xs
	{
		display:block;

	}

	#droite .xs img
	{
		border-radius: 100%;
	}

	#droite header h2
	{
		background-color: #FFFFFF;
		padding: 0;
	}

	#droite h2
	{
		background-color: #FECA07;
		color: #FFFFFF;
		padding: 0 0 0 10%;
	}

	#droite h2 span
	{
		display: none;
	}

	#droite .container
	{
		padding: 0 10%;
		display: flex;
		flex-direction: column;
	}

	#droite .left
	{
		width:100%;
	}

	#droite .left h4
	{
		margin-bottom: -5%;
	}

	#droite .left h4 br
	{
		display: none;
	}

	#droite .right
	{
		width: 100%;
	}

	#droite .toggle 
	{
		display:none;
	}

	#droite .ligne
	{
		display: none;
	}

	#droite #recommendations .left
	{
		width: 100%;
	}

	#droite #recommendations .right
	{
		width: 100%;
	}
}

@media (max-width: 425px)
{
	body
	{
		text-align: center;
	}

	#droite h2
	{
		padding: 0
	}

	#gauche h2
	{
		padding: 0;
		text-align: center;
	}
}

